<resources>
    <string name="app_name">Tanks_Blitz</string>
    <string name="button">НАЧАТЬ</string>
    <string name="swit">Сменить тему</string>
    <string name="Kart">Раздел Карт</string>
    <string name="tank_takt">
        Пригодность использования танком распространённых тактик исходя из его максимальных характеристик и в сравнении с другими танками на поле боя. Личный опыт не учитывается.
    </string>

    <string name="tank_kyky">
        Прячетесь за укрытием, перезаряжаете орудие, прицеливаетесь и выезжаете всего на секунду чтобы одним точным выстрелом поразить противника. До того как он осознал, что произошло, вы уже снова в укрытии. Хорошая стабилизация и сносная подвижность позволят вам легко следовать этой тактике.
    </string>

    <string name="tank_yda">
        Спрятавшись в кусте вы поджидаете противника не выдавая себя. Заметив цель, вы делаете выстрел и бросаетесь наутёк. Повторять пока противников не останется.
    </string>

    <string name="tank_front">
        Забудьте про камни, холмы, здания и все остальные укрытия. Сами станьте укрытием для своих союзников. Это, конечно, у вас получится только при наличии очень хорошей брони или же… если ваш танк уже уничтожен.
    </string>

    <string name="tank_snape">
        Спрятавшись в кусте вы стреляете в противников на другой стороне карты. Если вам безразлична вся ненависть сопотствующая этому, то вам нужны всего лишь хороший разброс и приличное пробитие, чтобы каждый выстрел достигал цели.
    </string>

    <string name="tank_cmert">
        Подъехав сзади к тяжёлому танку или медленной ПТ вы можете ездить вокруг него, уворачиваясь от выстрелов и легко нанося урон в корму. Для успеха нужны хорошая скорость поворота шасси и мощный двигатель.
    </string>

    <string name="tank_1_1">
        Кто выиграет в схватке 1 на 1 зависит от многого: броня, пробитие, подвижность и даже размеры танков. Одно можно сказать точно — без хорошего ДПМ лучше держать союзников рядом.
    </string>
    <string name="Zg1">Тактики</string>
    <string name="o_cebe">Приложение разработал студент группы ИС-33, Гусейнов Н.В.</string>
    <string name="o_programme">Данное приложение представляет из себя справочник по танкам, в ней рассказывается всё необходимое для базовых знаний по игре</string>
    <string name="title_notifications">ijbhi</string>
    <string name="title_dashboard">nll</string>

</resources>