<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stb_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        tools:ignore="MissingConstraints">

        <TableLayout
            android:id="@+id/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            tools:context=".Stb_1">


            <ImageView
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/stb_1" />

            <TextView
                android:id="@+id/Zg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zg1"
                android:textAlignment="center"
                android:textColor="@color/zagolovok"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_takt"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ку-ку (отлично)"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_kyky"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Линия фронта (не рекомендуется)"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_front"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Снайперская стрельба (не рукомендуется)"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_snape"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Круг смерти (хорошо)"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_cmert"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ударил-убежал (хорошо)"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_yda"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/zagolovok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 на 1 (отлично)"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:textStyle="italic"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="30dp"
                android:text="@string/tank_1_1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Характеристики"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Прочность:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="1850"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Обзор:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="302.0м"
                    android:textSize="18sp" />

            </TableRow>

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Огневая мощь"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="ДПМ:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="3359"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Пробитие:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="245"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="\Урон:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="330"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Урон по модулям/экипажу:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="150"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textColor="#808080"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Урон за барабан:"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="-"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Время перезарядки:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="5.89"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Калибр:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="105.0"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Скорострельность:"
                    android:textSize="18sp" />

                <TextView
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="10.18"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textColor="#808080"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Снарядов в барабане:"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="-"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp">

                <TextView
                    android:textColor="#808080"
                    android:textStyle="bold"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Время до готовности следующего снаряда:"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="-"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>